# shameleon

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  builder.py  client.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
backdoor_providers/: provider_dummy.go
backdoor_src/: config.go  go.mod  go.sum  main.go  module_forward.go  module_lforward.go  module_shell.go  packet.go  provider.go  provider_dummy.go  provider_loki.go  tunnel.go  utils.go
misc/dummy_server/: dummy_server.py
profiles_example/: dummy.yaml  loki.yaml
shameleon_client/: profile.py  server.py
shameleon_client/features/: lforward.py  socks.py
shameleon_client/modules/: lforward.py  shell.py
shameleon_client/providers/: base.py  dummy.py  loki.py
