[tool.poetry]
name = "shameleon"
version = "0.3.0"
description = ""
authors = [
    "Jychp <jeremy.chapeau@resilience.care>"
]
readme = "README.md"
homepage = "https://github.com/jychp/shameleon"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
cryptography = "^45.0.2"
aiohttp = "^3.11.18"

[tool.poetry.group.dummyserver.dependencies]
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
